updated to my profile

--- a/framework/index.html
+++ b/framework/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewpoint" content="width=device-width, initial-scale=1">
-        <title>Kitten Portfolio</title>
+        <title>Wataru Portfolio</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
@@ -15,10 +15,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="title-logo" src="http://placehold.it/100x100" alt="Portfolio logo">
+                    <img class="title-logo" src="img/logo.png" alt="Portfolio logo">
                 </div>
                 <div class="col-md-6 text-right text-uppercase">
-                    <h1 class="title-super text-thin">Jane Doette</h1>
+                    <h1 class="title-super text-thin">Wataru Sekiguchi</h1>
                     <h3>Front-end Ninja</h3>
                 </div>
             </div>
@@ -35,39 +35,20 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Appify kitty">
-                    <h3 class="text-uppercase">Appify</h3>
-                    <p><a href="http://github.com/udacity/appify">http://github.com/udacity/appify</a></p>
+                    <h3 class="text-uppercase">foobar</h3>
+                    <p><a href="https://github.com/watarumohawk/foobar">https://github.com/watarumohawk/foobar</a></p>
                 </div>
                 <div class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Sunflower kitty">
-                    <h3 class="text-uppercase">Sunflower</h3>
-                    <p><a href="http://github.com/udacity/sunflower">http://github.com/udacity/sunflower</a></p>
+                    <h3 class="text-uppercase">Learn Python the Hard Way</h3>
+                    <p><a href="https://github.com/watarumohawk/learn-python-the-hard-way">https://github.com/watarumohawk/learn-python-the-hard-way</a></p>
                 </div>
                 <div class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Bokeh kitty">
-                    <h3 class="text-uppercase">Bokeh</h3>
-                    <p><a href="http://github.com/udacity/bokeh">http://github.com/udacity/bokeh</a></p>
-                </div>
-            </div>
-        </div>
-
-        <!-- Modal -->
-        <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
-                    </div>
-                    <div class="modal-body">
-                        <img class="img-responsive" src="http://placekitten.com/1140/350">
-                        This was my first project in this class. I learned a lot about HTML and CSS.
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
+                    <h3 class="text-uppercase">Google Analytics Sample iOS App</h3>
+                    <p><a href="https://github.com/watarumohawk/analytics-ios-sample">https://github.com/watarumohawk/analytics-ios-sample</a></p>
                 </div>
             </div>
         </div>
     </body>
-
 </html>
