Replaced div with semantic tags

--- a/framework/index.html
+++ b/framework/index.html
@@ -8,47 +8,47 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-        <link rel="text/javascript" href="bootstrap/js/jquery-3.1.1.min.js">
-        <link rel="text/javascript" href="bootstrap/js/bootstrap.min.js">
+        <script type="text/javascript" href="bootstrap/js/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" href="bootstrap/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
+        <article class="container">
+            <section class="row">
+                <section class="col-md-6">
                     <img class="title-logo" src="img/logo.png" alt="Portfolio logo">
-                </div>
-                <div class="col-md-6 text-right text-uppercase">
+                </section>
+                <section class="col-md-6 text-right text-uppercase">
                     <h1 class="title-super text-thin">Wataru Sekiguchi</h1>
                     <h3>Front-end Ninja</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <img class="img-responsive" src="http://placekitten.com/1140/350" data-toggle="modal" data-target="#project1">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
+                </section>
+            </section>
+            <article class="row">
+                <section class="col-md-12">
+                    <img class="img-responsive" src="http://placekitten.com/1140/350" alt="kitty">
+                </section>
+            </article>
+            <section class="row">
+                <section class="col-md-12">
                     <h2 class="text-muted">Featured Work</h2>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
+                </section>
+            </section>
+            <article class="row text-center">
+                <section class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Appify kitty">
                     <h3 class="text-uppercase">foobar</h3>
                     <p><a href="https://github.com/watarumohawk/foobar">https://github.com/watarumohawk/foobar</a></p>
-                </div>
-                <div class="col-md-4">
+                </section>
+                <section class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Sunflower kitty">
                     <h3 class="text-uppercase">Learn Python the Hard Way</h3>
                     <p><a href="https://github.com/watarumohawk/learn-python-the-hard-way">https://github.com/watarumohawk/learn-python-the-hard-way</a></p>
-                </div>
-                <div class="col-md-4">
+                </section>
+                <section class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Bokeh kitty">
                     <h3 class="text-uppercase">Google Analytics Sample iOS App</h3>
                     <p><a href="https://github.com/watarumohawk/analytics-ios-sample">https://github.com/watarumohawk/analytics-ios-sample</a></p>
-                </div>
-            </div>
-        </div>
+                </section>
+            </article>
+        </article>
     </body>
 </html>
