--- a/framework/index.html
+++ b/framework/index.html
@@ -12,43 +12,49 @@
         <script type="text/javascript" href="bootstrap/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <article class="container">
-            <section class="row">
+        <div class="container">
+            <header class="row">
                 <section class="col-md-6">
                     <img class="title-logo" src="img/logo.png" alt="Portfolio logo">
                 </section>
+
                 <section class="col-md-6 text-right text-uppercase">
                     <h1 class="title-super text-thin">Wataru Sekiguchi</h1>
                     <h3>Front-end Ninja</h3>
                 </section>
-            </section>
+            </header>
+
             <article class="row">
                 <section class="col-md-12">
                     <img class="img-responsive" src="http://placekitten.com/1140/350" alt="kitty">
                 </section>
             </article>
+
             <section class="row">
                 <section class="col-md-12">
                     <h2 class="text-muted">Featured Work</h2>
                 </section>
             </section>
+
             <article class="row text-center">
-                <section class="col-md-4">
+                <article class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Appify kitty">
                     <h3 class="text-uppercase">foobar</h3>
-                    <p><a href="https://github.com/watarumohawk/foobar">https://github.com/watarumohawk/foobar</a></p>
-                </section>
-                <section class="col-md-4">
+                    <p><a href="https://github.com/watarumohawk/foobar" target="_blank">https://github.com/watarumohawk/foobar</a></p>
+                </article>
+
+                <article class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Sunflower kitty">
                     <h3 class="text-uppercase">Learn Python the Hard Way</h3>
-                    <p><a href="https://github.com/watarumohawk/learn-python-the-hard-way">https://github.com/watarumohawk/learn-python-the-hard-way</a></p>
-                </section>
-                <section class="col-md-4">
+                    <p><a href="https://github.com/watarumohawk/learn-python-the-hard-way" target="_blank">https://github.com/watarumohawk/learn-python-the-hard-way</a></p>
+                </article>
+
+                <article class="col-md-4">
                     <img class="img-responsive" src="http://placekitten.com/555/300" alt="Bokeh kitty">
                     <h3 class="text-uppercase">Google Analytics Sample iOS App</h3>
-                    <p><a href="https://github.com/watarumohawk/analytics-ios-sample">https://github.com/watarumohawk/analytics-ios-sample</a></p>
-                </section>
+                    <p><a href="https://github.com/watarumohawk/analytics-ios-sample" target="_blank">https://github.com/watarumohawk/analytics-ios-sample</a></p>
+                </article>
             </article>
-        </article>
+        </div>
     </body>
 </html>
